added prim's algorithm, fixed download button. minor code organization + bug fixes.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input
               type="radio"
               name="maze-design"
-              value="maze"
+              value="growingtree"
               id="maze-input"
               checked
             />
@@ -43,10 +43,17 @@
             <input
               type="radio"
               name="maze-design"
-              value="maze2"
+              value="recursive"
               id="maze2-input"
             />
             <label for="maze2-input">Maze (Recursive Backtracker)</label>
+            <input
+              type="radio"
+              name="maze-design"
+              value="prims"
+              id="maze2-input"
+            />
+            <label for="maze2-input">Maze (Prim's Algorithm)</label>
             <input
               type="radio"
               name="maze-design"
